<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".pages.home.settings.customisationMenu.SettingsCustomisationSettingsMenu">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recent_games_player_profile_title"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="20sp">
    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recent_games_player_profile_subtitle"
        android:textStyle="normal"
        android:textColor="@color/black"
        android:layout_marginBottom="16dp"
        android:textSize="16sp">
    </TextView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:cardCornerRadius="20dp"
        android:layout_marginBottom="16dp"
        android:clipChildren="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/sunglow"
            android:paddingStart="20dp"
            android:orientation="horizontal"
            android:paddingEnd="20dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:gravity="center_vertical"
                android:text="@string/points_per_game">
            </TextView>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/points_per_game_slider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:useMaterialThemeColors="false">
            </com.google.android.material.switchmaterial.SwitchMaterial>
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:cardCornerRadius="20dp"
        android:layout_marginBottom="16dp"
        android:clipChildren="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/sunglow"
            android:paddingStart="20dp"
            android:orientation="horizontal"
            android:paddingEnd="20dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:gravity="center_vertical"
                android:text="@string/assists_per_game">
            </TextView>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/assists_per_game_slider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:useMaterialThemeColors="false">
            </com.google.android.material.switchmaterial.SwitchMaterial>
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:cardCornerRadius="20dp"
        android:layout_marginBottom="16dp"
        android:clipChildren="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/sunglow"
            android:paddingStart="20dp"
            android:orientation="horizontal"
            android:paddingEnd="20dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:gravity="center_vertical"
                android:text="@string/rebounds_per_game">
            </TextView>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/rebounds_per_game_slider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:useMaterialThemeColors="false">
            </com.google.android.material.switchmaterial.SwitchMaterial>
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:cardCornerRadius="20dp"
        android:layout_marginBottom="16dp"
        android:clipChildren="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/sunglow"
            android:paddingStart="20dp"
            android:orientation="horizontal"
            android:paddingEnd="20dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:gravity="center_vertical"
                android:text="@string/overall_field_goal_percentage">
            </TextView>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/overall_field_goal_percentage_slider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:useMaterialThemeColors="false">
            </com.google.android.material.switchmaterial.SwitchMaterial>
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:cardCornerRadius="20dp"
        android:layout_marginBottom="16dp"
        android:clipChildren="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/sunglow"
            android:paddingStart="20dp"
            android:orientation="horizontal"
            android:paddingEnd="20dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:gravity="center_vertical"
                android:text="@string/steals">
            </TextView>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/steals_percentage_slider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:useMaterialThemeColors="false">
            </com.google.android.material.switchmaterial.SwitchMaterial>
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:cardCornerRadius="20dp"
        android:layout_marginBottom="16dp"
        android:clipChildren="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/sunglow"
            android:paddingStart="20dp"
            android:orientation="horizontal"
            android:paddingEnd="20dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:gravity="center_vertical"
                android:text="@string/blocks">
            </TextView>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/blocks_percentage_slider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:useMaterialThemeColors="false">
            </com.google.android.material.switchmaterial.SwitchMaterial>
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:cardCornerRadius="20dp"
        android:layout_marginBottom="16dp"
        android:clipChildren="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/sunglow"
            android:paddingStart="20dp"
            android:orientation="horizontal"
            android:paddingEnd="20dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:gravity="center_vertical"
                android:text="@string/ft">
            </TextView>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/free_throw_percentage_slider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:useMaterialThemeColors="false">
            </com.google.android.material.switchmaterial.SwitchMaterial>
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:cardCornerRadius="20dp"
        android:layout_marginBottom="16dp"
        android:clipChildren="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/sunglow"
            android:paddingStart="20dp"
            android:orientation="horizontal"
            android:paddingEnd="20dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:gravity="center_vertical"
                android:text="@string/free_throws_made">
            </TextView>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/free_throws_made_slider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:useMaterialThemeColors="false">
            </com.google.android.material.switchmaterial.SwitchMaterial>
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:cardCornerRadius="20dp"
        android:layout_marginBottom="16dp"
        android:clipChildren="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/sunglow"
            android:paddingStart="20dp"
            android:orientation="horizontal"
            android:paddingEnd="20dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:gravity="center_vertical"
                android:text="@string/plus_minus">
            </TextView>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/plus_minus_slider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:useMaterialThemeColors="false">
            </com.google.android.material.switchmaterial.SwitchMaterial>
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>


</LinearLayout>