...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".pages.home.settings.SettingsFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/settings_customisation_settings"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:cardCornerRadius="20dp"
        android:layout_marginBottom="16dp"
        android:clipChildren="true">

...
            </ImageView>
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/settings_change_favourite_team"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:cardCornerRadius="20dp"
        android:clipChildren="true">

        <LinearLayout
...
